--- a/.gitmodules
+++ b/.gitmodules
@@ -1,6 +1,6 @@
 [submodule "m-ex"]
 	path = m-ex
-	url = https://github.com/akaneia/m-ex.git
+	url = https://github.com/akaneia/m-ex
 [submodule "doldecomp/melee"]
 	path = doldecomp/melee
 	url = https://github.com/doldecomp/melee
